# named_pipes_socket_notifier

./: CMakeLists.txt
src/: local_socket_socket_notifier.cpp  named_pipes_socket_notifier.cpp
